--- a/english.html
+++ b/english.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>Alan Ball</li>
 
+<li>Alexander Technique</li>
+
 <li>Alexandra</li>
 
 <li>Alfred</li>
@@ -362,6 +364,8 @@ Error message and password prompt
 <li>Exile</li>
 
 <li>Fa</li>
+
+<li>Fauré's Requiem</li>
 
 <li>Films</li>
 
@@ -587,6 +591,8 @@ Error message and password prompt
 
 <li>Scents</li>
 
+<li>Searching for Iry</li>
+
 <li>Semolina cake</li>
 
 <li>Shoretzky</li>
@@ -602,6 +608,8 @@ Error message and password prompt
 <li>soul</li>
 
 <li>Spike Lee</li>
+
+<li>Spiral Spring</li>
 
 <li>Steve Buscemi</li>
 
@@ -8573,7 +8581,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219181343715" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219185326870" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8582,7 +8590,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Revision in the kitchen]] Sonia [[Coen Sisters]]" title="$:/StoryList">
+<div list="Iry [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8602,7 +8610,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219181341625" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219185336913" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8854,6 +8862,15 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
+<div created="20200219184254185" modified="20200219184347405" tags="[[Iry claims]]" title="Alexander Technique">
+<pre>
+[img[pictures/shitat-alexander.jpg]]
+
+
+ &lt;&lt;heblink [[שיטת אלכסנדר]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200213150440998" modified="20200213150620242" tags="[[Coen sister]] [[Single parent children]]" title="Alexandra">
 <pre>[img[pictures/alexandra.jpg]]
 
@@ -8925,7 +8942,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200216191101416" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200219185435327" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9459,6 +9476,18 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[פה]]&gt;&gt;
 </pre>
 </div>
+<div created="20200219184944077" modified="20200219185100534" tags="Music [[How many songs can you even invent at all]] [[Iry claims]] [[On the road to somewhere]]" title="Fauré's Requiem">
+<pre>
+[img[pictures/requiem-faure.jpg]]
+
+
+
+ &lt;&lt;heblink [[הרקוויאם של פורה]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200212161010633" modified="20200212192057740" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
@@ -9878,8 +9907,33 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
  &lt;&lt;heblink [[איריס הבת]]&gt;&gt;</pre>
 </div>
-<div created="20200202163025535" modified="20200202163717639" tags="[[Coen sister]]" title="Iry">
+<div created="20200202163025535" modified="20200219184925599" tags="[[Coen sister]]" title="Iry">
 <pre>[img[pictures/iri.jpg]]
+
+
+
+!!![[Alfred]]:
+
+Iry is the soul of the world, and even though or thank to me being high right now in the best possible way, I can write like that about Iry. The Coen Sisters are one by one marvelous, and in spite of and even though that at another moment I could write the exact same words about somebody else, I'm writing them now on Iry, the soul of the world and also the world's champion.
+
+Yesterday I went with her just to walk around the city, and today we're sitting all day in the house ******. Maybe because I've skipped my twenties, it's pleasant to experience them now with the ageless group, from the aspect of always being together. There is always someone in the apartment, and that's very helpful [[When you're down and troubled|https://www.youtube.com/watch?v=xEkIou3WFnM]]
+
+I look at her now. She's making us toasts, I've tried to help her but she asked to do it [[on her own|Iry claims]]. She moves silently, erect, like a monk in a western kitchen kata. Walking towards the refrigerator and returning to the working space. Concently cutting the vegetables, and putting them on the bread slices, which she has cut the edges off. She is offering me a fresh pineapple and rum cocktail. She makes it in the blender with ice. After the cocktail are ready she's taking the toasts out and putting them on the counter. We're sitting on the counter, eating and drinking. I'm asking her about her [[Alexander|Alexander Technique]] and she's telling me. I feel how my body getting lengthener and wider as she's speaking. We're drinking and eating and she's speaking and moving completely serious with a smile. She's making another cocktail in the blender. This time she's adding lemon juice. While making the cocktail and cleaning the sink and the dishes, she keeps telling me how she thinking Alexander right now while talking to me. Letting the neck be free. [[&quot;When the movements are executed from thinking of letting go of the neck&quot;|Spiral Spring]] she's telling me &quot;they come out more rightly from the body&quot;.
+
+I'm asking her, and she's calling her Alexander's teacher and scheduling me a first lesson.
+
+In order of understanding more, I recommend :
+
+1.	[[Fauré's Requiem]], while reading what Iry wrote.
+
+2.	The story that [[Gura wrote on Iry|Searching for Iry]] that appears in BY THE WAY AS AN ASIDE
+
+3.	[[David Bowie]]
+
+4.	[[Iry claims]]
+
+
+
 
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
@@ -10140,7 +10194,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200219174827887" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219185033235" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10173,8 +10227,7 @@ For example, it seethes me when people use words purposelessly, like the word lo
 </pre>
 </div>
 <div created="20200219173118907" modified="20200219173216593" tags="[[Coen sister]]" title="Mark">
-<pre>
-[img[pictures/mark1.jpg]]
+<pre>[img[pictures/mark1.jpg]]
 
 
  &lt;&lt;heblink [[מרק]]&gt;&gt;
@@ -10524,8 +10577,7 @@ Here in the [[archive|The archive's trustees]] we add from time to time, with lo
 </pre>
 </div>
 <div created="20200219173952522" modified="20200219174045940" tags="[[Christmas dinner Recipes]] Recipes" title="Panettone">
-<pre>
-[img[pictures/panatone.jpg]]
+<pre>[img[pictures/panatone.jpg]]
 
 
 
@@ -10786,8 +10838,7 @@ Apparently things do come in bundles. [[The letter from Dandan|Chez Panisse]] ca
 </pre>
 </div>
 <div created="20200219174756600" modified="20200219174850866" tags="Recipes [[Food addicts]] Restaurants" title="Rice Pudding">
-<pre>
-[img[pictures/rice-pudding.jpg]]
+<pre>[img[pictures/rice-pudding.jpg]]
 
 
 
@@ -10800,8 +10851,7 @@ Apparently things do come in bundles. [[The letter from Dandan|Chez Panisse]] ca
 </pre>
 </div>
 <div created="20200219174433509" modified="20200219174520799" tags="Recipes [[Christmas dinner Recipes]]" title="Rigo Jancsi">
-<pre>
-[img[pictures/rigo-jancsi.jpg]]
+<pre>[img[pictures/rigo-jancsi.jpg]]
 
 
  &lt;&lt;heblink [[ריגו יאנצ'י]]&gt;&gt;</pre>
@@ -10828,8 +10878,7 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
  &lt;&lt;heblink [[דינה זכרה לברכה]]&gt;&gt;</pre>
 </div>
 <div created="20200219173640193" modified="20200219173922035" tags="[[Christmas dinner Recipes]] Recipes [[Food addicts]]" title="Roast beef with potatoes">
-<pre>
-[img[pictures/zli-bakar.jpg]]
+<pre>[img[pictures/zli-bakar.jpg]]
 
 
 
@@ -10887,6 +10936,18 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
+</div>
+<div created="20200219185255391" modified="20200219185508059" tags="[[On the road to somewhere]] [[Iry and Gura]]" title="Searching for Iry">
+<pre>
+[img[pictures/mechapeset-et-iri.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Searching for Iry]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[מחפשת את אירי]]&gt;&gt;
+</pre>
 </div>
 <div created="20200219170734669" modified="20200219170944403" tags="Baking [[Food addicts]] Recipes" title="Semolina cake">
 <pre>[img[pictures/ugat-solet.jpg]]
@@ -11007,6 +11068,16 @@ And I say:
 5.    [[BlaKkKlansman|Films]]
 
  &lt;&lt;heblink [[ספייק לי]]&gt;&gt;
+</pre>
+</div>
+<div created="20200219184517386" modified="20200219184658690" tags="[[Iry claims]] [[The global village]]" title="Spiral Spring">
+<pre>
+[img[pictures/kfitz-spirali.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[קפיץ ספירלי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200218202232757" modified="20200218205624549" tags="[[Outer sisters]] Films [[The Sopranos]] TV [[TV Series]]" title="Steve Buscemi">
