--- a/english.html
+++ b/english.html
@@ -641,6 +641,8 @@ Error message and password prompt
 
 <li>The cups we're drinking from</li>
 
+<li>The erected</li>
+
 <li>The estate</li>
 
 <li>The estate`s kitchen</li>
@@ -8581,7 +8583,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219185326870" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219191225250" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8590,7 +8592,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Iry [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8942,7 +8944,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200219185435327" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200219191033803" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -11266,6 +11268,20 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
  &lt;&lt;heblink [[הספלים מהם אנו שותים]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200219190912292" modified="20200219191227913" tags="[[Iry claims]] [[The global village]]" title="The erected">
+<pre>
+[img[pictures/zkufey-hagev.jpg]]
+
+
+!!![[Gura]]:
+
+[[Iry]] claims, that those who finish their back straightening in this metamorphosis, and transfer from quadrupeds to bipeds, finished their business here on this earth in this galaxy.
+
+She also claims, that [[David Bowie]] is a good example of a back straightened and also [[Fa]]. 
+
+
+ &lt;&lt;heblink [[זקופי הגו]]&gt;&gt;</pre>
 </div>
 <div created="20200217171627257" modified="20200217171826475" tags="Houses" title="The estate">
 <pre>[img[pictures/sof-hanachala.jpg]]
