--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217150815393" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219133714845" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219184455521" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רביזיה במטבח]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219172214302" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219190925344" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219174918094" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219191251931" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12871,14 +12871,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20200212143827884" tags="[[אירי טוענת]] מוזיקה [[בדרך לאן שהוא]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="הרקוויאם של פורה">
+<div created="20161221191920525" modified="20200219185216961" tags="[[אירי טוענת]] מוזיקה [[בדרך לאן שהוא]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
 אני יושבת כעת על המדרגות שלמרגלות המונמרטר. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
 
 אני מאזינה לביצוע של [[Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland|https://www.afit.edu.pl/]]. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
-גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
+גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. 
+
+
+
+&lt;&lt;englink [[Fauré's Requiem]]&gt;&gt;</pre>
 </div>
 <div created="20190624163906171" modified="20190626152608380" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]]" title="השביל של אריאלה">
 <pre>[img[pictures/hashvil-shel-ariela.jpg]]
@@ -12969,14 +12973,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חוהמ&quot;ס התשע&quot;ט, שעות אחר הצהריים, שפי נסעה עם ננו התינוקת המתוקה שלנו, ואני אמור להסתלבט וגם לעבוד, אבל אני יושב כמו אידיוט ושומע את נשיא ארה&quot;ב אומר דברים בעוד רוה&quot;מ שלנו יושב לידו ועף על החיים. לפתע קול שירת זמירות חג עולה מהסוכה שבחצר הבניין הסמוך, ומציל אותי. אני מחייך. קם. מציץ דרך התריס. נהנה. מצלם, ושולח [[לגורה|גורה]].</pre>
 </div>
-<div created="20170527175706471" modified="20170605214948712" tags="[[אירי טוענת]]" title="זקופי הגו">
+<div created="20170527175706471" modified="20200219191314177" tags="[[אירי טוענת]]" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
 
 !!![[גורה]]:
 
 [[אירי]] טוענת, שאלה שבגלגול הזה, מסיימים את התיישרות הגו שלהם, והופכים להיות מהולכי על ארבע להולכי על שתיים, סיימו את העניינים שלהם כאן על הכדור הזה בגלקסיה הזו.
 
-היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו וגם [[פה]].</pre>
+היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו וגם [[פה]].
+
+
+&lt;&lt;englink [[The erected]]&gt;&gt;
+</pre>
 </div>
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
@@ -15216,7 +15224,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[They give away cell phones]]&gt;&gt;</pre>
 </div>
-<div created="20170406164152446" modified="20200208130129654" tags="[[אירי וגורה]] [[בדרך לאן שהוא]]" title="מחפשת את אירי">
+<div created="20170406164152446" modified="20200219185604054" tags="[[אירי וגורה]] [[בדרך לאן שהוא]]" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
@@ -15224,7 +15232,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 את הסיפור הזה כתבתי לאחר שחזרנו עם [[אירי]] מהודו, וערך אותו [[רני|רן יגיל]], שהוא [[אחות חוץ|אחיות חוץ]] יקרה.
 
-&lt;&lt;list-links filter:&quot;[tag[מחפשת את אירי]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[מחפשת את אירי]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[Searching for Iry]]&gt;&gt;</pre>
 </div>
 <div created="20170918165813987" modified="20200212162940974" tags="[[סיפורים אמיתיים]] סרטים" title="מטא בדיון">
 <pre>[img[pictures/meta-fiction.jpg]]
@@ -17966,7 +17977,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170601134704239" modified="20200217120935703" tags="[[אירי טוענת]] [[הכפר הגלובלי]]" title="קפיץ ספירלי">
+<div created="20170601134704239" modified="20200219184804621" tags="[[אירי טוענת]] [[הכפר הגלובלי]]" title="קפיץ ספירלי">
 <pre>[img[pictures/kfitz-spirali.jpg]]
 
 [[אירי]]:
@@ -17977,6 +17988,8 @@ Fapina''
 
 [[בשיעורי האלכסנדר|שיטת אלכסנדר]], לומדים לכוון, [[להניח לצוואר להיות חופשי|צווארים]], לרווח בין מפרק למפרק, ובכך, בין השאר, לשמור על הקפיץ הספירלי, ולנוע ביתר קלות קדימה ולמעלה.
 
+
+&lt;&lt;englink [[Spiral Spring]]&gt;&gt;
 
 </pre>
 </div>
@@ -18608,7 +18621,7 @@ Fapina''
 &lt;&lt;englink [[Siach Cafe]]&gt;&gt;
 </pre>
 </div>
-<div created="20161206222443036" modified="20170907165207735" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20200219184437433" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
@@ -18625,6 +18638,9 @@ Fapina''
 כדי לתת לראש ללכת קדימה ולמעלה.
 
 כדי לתת לגב להיות ארוך ורחב.
+
+
+&lt;&lt;englink [[Alexander Technique]]&gt;&gt;
 
 </pre>
 </div>
