--- a/english.html
+++ b/english.html
@@ -345,6 +345,8 @@ Error message and password prompt
 
 <li>David Byrne</li>
 
+<li>David Chase</li>
+
 <li>Delicatessen Chez Genevieve</li>
 
 <li>Dreams that we've dreamt</li>
@@ -632,6 +634,8 @@ Error message and password prompt
 <li>The Big Lebowski</li>
 
 <li>The blue is already here</li>
+
+<li>The body updates</li>
 
 <li>The Bridge</li>
 
@@ -8583,7 +8587,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219191603337" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219194251804" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8592,7 +8596,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Fa [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8612,7 +8616,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219191438457" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219193629164" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8944,7 +8948,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200219191033803" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200219194406543" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9383,6 +9387,20 @@ This is [[David Byrne|http://davidbyrne.com/]].
 
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
+</div>
+<div created="20200219194330639" modified="20200219194546174" tags="[[Outer sisters]] Films [[The Sopranos]] Music" title="David Chase">
+<pre>
+[img[pictures/david-chase.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[דיוויד צ'ייס]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200215113637898" modified="20200219133116379" tags="Meals Coffee [[Coffee shops]] Restaurants [[The kitchen by Genevieve]]" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
@@ -9919,7 +9937,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
  &lt;&lt;heblink [[איריס הבת]]&gt;&gt;</pre>
 </div>
-<div created="20200202163025535" modified="20200219184925599" tags="[[Coen sister]]" title="Iry">
+<div created="20200202163025535" modified="20200219193356566" tags="[[Coen sister]]" title="Iry">
 <pre>[img[pictures/iri.jpg]]
 
 
@@ -9928,7 +9946,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
 Iry is the soul of the world, and even though or thank to me being high right now in the best possible way, I can write like that about Iry. The Coen Sisters are one by one marvelous, and in spite of and even though that at another moment I could write the exact same words about somebody else, I'm writing them now on Iry, the soul of the world and also the world's champion.
 
-Yesterday I went with her just to walk around the city, and today we're sitting all day in the house ******. Maybe because I've skipped my twenties, it's pleasant to experience them now with the ageless group, from the aspect of always being together. There is always someone in the apartment, and that's very helpful [[When you're down and troubled|https://www.youtube.com/watch?v=xEkIou3WFnM]]
+Yesterday I went with her just to walk around the city, and today we're sitting all day in the house, chewing ourselves to death . Maybe because I've skipped my twenties, it's pleasant to experience them now with the ageless group, from the aspect of always being together. There is always someone in the apartment, and that's very helpful [[When you're down and troubled|https://www.youtube.com/watch?v=xEkIou3WFnM]]
 
 I look at her now. She's making us toasts, I've tried to help her but she asked to do it [[on her own|Iry claims]]. She moves silently, erect, like a monk in a western kitchen kata. Walking towards the refrigerator and returning to the working space. Concently cutting the vegetables, and putting them on the bread slices, which she has cut the edges off. She is offering me a fresh pineapple and rum cocktail. She makes it in the blender with ice. After the cocktail are ready she's taking the toasts out and putting them on the counter. We're sitting on the counter, eating and drinking. I'm asking her about her [[Alexander|Alexander Technique]] and she's telling me. I feel how my body getting lengthener and wider as she's speaking. We're drinking and eating and she's speaking and moving completely serious with a smile. She's making another cocktail in the blender. This time she's adding lemon juice. While making the cocktail and cleaning the sink and the dishes, she keeps telling me how she thinking Alexander right now while talking to me. Letting the neck be free. [[&quot;When the movements are executed from thinking of letting go of the neck&quot;|Spiral Spring]] she's telling me &quot;they come out more rightly from the body&quot;.
 
@@ -10705,7 +10723,7 @@ And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose 
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
-<div created="20200217130746048" modified="20200217132854759" tags="[[Food addicts]] Baking [[Dreams that we've dreamt]]" title="Powders">
+<div created="20200217130746048" modified="20200219192735176" tags="[[Food addicts]] Baking [[Dreams that we've dreamt]]" title="Powders">
 <pre>[img[pictures/avkot.jpg]]
 
 !!![[Yoyo]]:
@@ -11232,6 +11250,21 @@ It's not like there's no more fear, difficulty, agony, sadness and anger. The he
 
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
+<div created="20200219192024367" modified="20200219193456061" tags="[[Iry claims]] [[Monkeys with car keys]] [[On the road to somewhere]]" title="The body updates">
+<pre>
+[img[pictures/haguf-mitadken.jpg]]
+
+
+!!![[Iry]]:
+
+When I was 11 I took the camera, which I received from my grandma and grandpa for my birthday, joyfully, to a school trip to the [[Carmel|https://en.wikipedia.org/wiki/Mount_Carmel]]. Among others, we visited the appealing site- [[Kishon River|https://en.wikipedia.org/wiki/Kishon_River]]. It looked so beautiful to me, the far away chimneys. Oh how disappointed I was when the photos arrived from the photo shop and I found out, I hadn't realized, that the camera doesn't filter, doesn't ignore the fence that stands between it and the magnificent chimneys, and I did. From there I've started to notice, and the eye has started to learn what will come out wrong.
+
+The body updated. Photography indeed didn't become a hobby of mine, but I keep on taking interest on our smart bodies, and how you can improve your abilities and senses all the time, in [[Alexandrian|Alexander Technique]] it's called- studying. You can, for example, teach your [[taste buds|Powders]], until you become a decent [[Feinschmecker|Rosh Hashana dinner]].
+
+
+
+ &lt;&lt;heblink [[הגוף מתעדכן]]&gt;&gt;</pre>
+</div>
 <div created="20200215105718382" modified="20200215121523220" tags="[[TV Series]] TV" title="The Bridge">
 <pre>[img[pictures/hagesher.jpg]]
 
@@ -11446,8 +11479,20 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 </pre>
 </div>
-<div created="20200213142916801" modified="20200213155259643" tags="[[TV Series]] TV Kitchens Mothers" title="The Sopranos">
+<div created="20200213142916801" modified="20200219194150837" tags="[[TV Series]] TV Kitchens Mothers" title="The Sopranos">
 <pre>[img[pictures/the-sopranos.jpg]]
+
+
+!!![[Angelic]]:
+
+I've started watching [[The Sopranos|https://www.imdb.com/title/tt0141842/]] by [[David Chase]] in an organized way just few days ago, and I've finished seeing the first season few minutes ago. 
+
+When they talked about his mother- who demanded his extermination- [[Dr. Melfi|https://www.imdb.com/title/tt0141842/characters/nm0000966?ref_=ttfc_fc_cl_t2]] read out of a psychological lexicon the definition of a Borderline Personality Disorder- I realized that my parents are like Tony Soprano marrying his [[mother|https://www.imdb.com/title/tt0141842/characters/nm0545408?ref_=ttfc_fc_cl_t25]].
+
+[[When Artie points a rifle at Tony|https://www.youtube.com/watch?v=VawiILj2w3M&amp;feature=youtu.be]], after realizing Tony burnt down his former restaurant- Tony succeeded at stopping him, when he swore on his mother. Artie backed away with a [[yeah right|https://www.youtube.com/watch?v=C6iAzyhm0p0]] expression. He raged, got into the car and drove away.
+
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[The Sopranos]]&quot;&gt;&gt;
 
