--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219190925344" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219193658567" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219191251931" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219194454333" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11888,7 +11888,7 @@ Is where I want to be
 
 &lt;&lt;englink [[David Byrne]]&gt;&gt;</pre>
 </div>
-<div created="20170829174937405" modified="20190310131241746" tags="[[אחיות חוץ]] הסופרנוס מוזיקה טלוויזיה" title="דיוויד צ'ייס">
+<div created="20170829174937405" modified="20200219194522660" tags="[[אחיות חוץ]] הסופרנוס מוזיקה טלוויזיה" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -11906,7 +11906,7 @@ different tastes, but there were things we both love: family, work, people in al
 
  אני ממליץ על [[ראיון|https://www.youtube.com/watch?v=_7jgaAfWS64]] מרתק בעיני, בו [[פיטר בוגדנוביץ'|http://www.imdb.com/name/nm0000953/]], שהיה הפסיכולוג של [[הפסיכולוגית|http://www.imdb.com/title/tt0141842/characters/nm0000966?ref_=tt_cl_t2]] של [[טוני סופרנו]], הוא המראיין.
 
-</pre>
+&lt;&lt;englink [[David Chase]]&gt;&gt;</pre>
 </div>
 <div created="20170428171750882" modified="20181023114908733" tags="HH בתים" title="דיור מוגז">
 <pre>[img[pictures/diyur-mugaz.jpg]]
@@ -12216,12 +12216,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The bartender]]&gt;&gt;</pre>
 </div>
-<div created="20171005203600150" modified="20200208125628836" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]]" title="הגוף מתעדכן">
+<div created="20171005203600150" modified="20200219193141759" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]]" title="הגוף מתעדכן">
 <pre>[img[pictures/haguf-mitadken.jpg]]
 
 !!![[אירי]]:
 
-כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום אומנם לא הפך לתחביב שלי, אך אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.</pre>
+כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום אומנם לא הפך לתחביב שלי, אך אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.
+
+
+&lt;&lt;englink [[The body updates]]&gt;&gt;</pre>
 </div>
 <div created="20170713130412612" modified="20200215124840642" tags="סדרות טלוויזיה" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
