--- a/english.html
+++ b/english.html
@@ -8587,7 +8587,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219194251804" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219195305309" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8616,7 +8616,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219193629164" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219194933021" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9477,9 +9477,20 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[עץ המשפחה של אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200215222945436" modified="20200217121629298" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]]" title="Exile">
+<div created="20200215222945436" modified="20200219195321421" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]]" title="Exile">
 <pre>[img[pictures/galoot.jpg]]
 
+
+
+!!![[Iry]]:
+
+The thing I've thought about lately (it started last year, with the passing of [[David Bowie]], that in two days is going to be a year ago), is just like [[sending criminals to Australia in the past|https://en.wikipedia.org/wiki/Australia]], earth is also an exile for souls from other stars.
+
+Maybe the day that we'll reach, what we call, other planets is not that far. In this particular point of time of course it doesn't seem that we could [[transfer ourselves there|The Face Directed Outside]], and if those words are even a little bit true, this is Australia.
+
+The idea that this is exile, made me think in a second about explanations of many things, but to summarize them in a sentence -with the aspiration of a reinforcing gaze, like they say today- maybe this exile here, is some sort of maturity ceremony, and maybe after you pass it, you could finally reach your star, maybe that's what Buddhists call [[nirvana|https://en.wikipedia.org/wiki/Nirvana]]. It doesn't seem probable to me that when we come back to our star everything becomes simple- but it's not easy that feel at home.
+
+I want to think that David Bowie returned to his star peacefully, and by that accomplished his mission, if not beyond.
 
 
 
