--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219193658567" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219200751751" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219194454333" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219201054605" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10169,7 +10169,7 @@ well,
 
 </pre>
 </div>
-<div created="20170731120559711" modified="20190109182106011" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
+<div created="20170731120559711" modified="20200219200735654" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
 
 !!![[אירי]]:
@@ -10177,7 +10177,9 @@ well,
 
 [[איזדורה דאנקן|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%96%D7%93%D7%95%D7%A8%D7%94_%D7%93%D7%90%D7%A0%D7%A7%D7%9F]] לא אהבה את קשיחות הטכניקה של המחול הקלאסי, ואת התכחשותו לכח הכבידה. היא טענה כי הוא מגביל את יכולת הביטוי שלה. היא הסירה את נעלי הריקוד, ונתנה לתנועות ולקשר עם האדמה לקחת את הגוף - וכל זה בתחילת המאה ה-20, וזה עוד לפני שהזכרנו את חייה האישיים של האישה המהפכנית הזו.
 
-</pre>
+
+
+&lt;&lt;englink [[Isadora Duncan]]&gt;&gt;</pre>
 </div>
 <div created="20170914175036224" modified="20200212181804062" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
@@ -10611,12 +10613,15 @@ well,
 
 </pre>
 </div>
-<div created="20170729122045070" modified="20170729204444850" tags="[[אירי טוענת]]" title="ארנון חן">
+<div created="20170729122045070" modified="20200219201117373" tags="[[אירי טוענת]]" title="ארנון חן">
 <pre>[img[pictures/arnon-chen.jpg]]
 
 !!![[אירי]]:
 
 ארנון חן הוא אבא שלי, והוא ללא ספק &quot;דמות עגולה&quot;, למרות שהוא ללא ספק אדם רזה.
+
+
+&lt;&lt;englink [[Arnon Chen]]&gt;&gt;
 </pre>
 </div>
 <div created="20170319170256065" modified="20170507182017466" tags="HH" title="אשת העסקים">
