--- a/english.html
+++ b/english.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>Anna</li>
 
+<li>Arnon Chen</li>
+
 <li>Assuming and Preserving</li>
 
 <li>Ayala Malach Pines</li>
@@ -434,6 +436,8 @@ Error message and password prompt
 <li>Iry and Gura</li>
 
 <li>Iry claims</li>
+
+<li>Isadora Duncan</li>
 
 <li>James Gandolfini</li>
 
@@ -8596,7 +8600,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Arnon Chen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8929,6 +8933,25 @@ She creates cosmetic medical products from natural materials. She produces the m
 
  &lt;&lt;heblink [[אנה]]&gt;&gt;</pre>
 </div>
+<div created="20200219200805835" modified="20200219201025553" tags="[[Iry claims]]" title="Arnon Chen">
+<pre>
+[img[pictures/arnon-chen.jpg]]
+
+
+!!![[Iry]]:
+
+Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even though he's an undoubtedly skinny man.
+
+
+
+ &lt;&lt;heblink [[ארנון חן]]&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
 <pre>[img[pictures/nekiyey-capaim.jpg]]
 
@@ -8948,7 +8971,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200219194406543" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200219200932620" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9994,6 +10017,25 @@ In order of understanding more, I recommend :
 &lt;&lt;list-links filter:&quot;[tag[Iry claims]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[אירי טוענת]]&gt;&gt;</pre>
+</div>
+<div created="20200219200218714" modified="20200219200528395" tags="[[Iry claims]] [[Outer sisters]]" title="Isadora Duncan">
+<pre>
+[img[pictures/isadora-duncan.jpg]]
+
+!!![[Iry]]:
+
+[[Isadora Duncan|https://en.wikipedia.org/wiki/Isadora_Duncan]] didn't like the technique's stiffness of the classical ballet, and its denial of gravity. She claimed that it's limiting her self-expression ability. She removed her dancing shoes, and let the movement and her relation with the ground to control the body- and all of that in the beginning of the 20th century, and even before we've mentioned the private life of this revolutionary woman. 
+
+
+
+
+
+
+
+ &lt;&lt;heblink [[איזדורה דאנקן]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200213142319100" modified="20200213144413213" tags="[[Outer sisters]] Films TV [[TV Series]] [[The Sopranos]]" title="James Gandolfini">
 <pre>[img[pictures/james-gandolfini.jpg]]
