--- a/index.html
+++ b/index.html
@@ -9172,10 +9172,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200217150815393" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200220063600793" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200219184455521" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220064106268" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[השביל של אריאלה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219200751751" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220064728881" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219201054605" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200220064657067" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12892,12 +12892,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Fauré's Requiem]]&gt;&gt;</pre>
 </div>
-<div created="20190624163906171" modified="20190626152608380" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]]" title="השביל של אריאלה">
+<div created="20190624163906171" modified="20200220064724410" tags="[[כאן בגטו]] [[מטא בדיון]]" title="השביל של אריאלה">
 <pre>[img[pictures/hashvil-shel-ariela.jpg]]
 
 !!![[תומר]]:
 
-השביל היפה הזה נמצא  בצידו המזרחי של האילון, והוא השביל של אריאלה, חברתי [[מהעבודה באולפן|מערכת תל אביב]]</pre>
+השביל היפה הזה נמצא  בצידו המזרחי של האילון, והוא השביל של אריאלה, חברתי [[מהעבודה באולפן|מערכת תל אביב]]
+
+
+&lt;&lt;englink [[Ariella's path]]&gt;&gt;</pre>
 </div>
 <div created="20181101155948399" modified="20200217151022364" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]] מטבחים" title="התדר בואך רומנו">
 <pre>[img[pictures/teder-romano.jpg]]
