--- a/english.html
+++ b/english.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>Anna</li>
 
+<li>Ariella's path</li>
+
 <li>Arnon Chen</li>
 
 <li>Assuming and Preserving</li>
@@ -8466,7 +8468,7 @@ Error message and password prompt
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
             &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot; &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;&quot;,
+            &quot;text&quot;: &quot;Tomer:\nThis beautiful path is on the eastern side of the Ayalon road, and it's Ariella's path, my friend from the desk.\n&quot;,
             &quot;type&quot;: &quot;text/plain&quot;
         }
     }
@@ -8600,7 +8602,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Arnon Chen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8620,7 +8622,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219194933021" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220064542404" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8933,6 +8935,19 @@ She creates cosmetic medical products from natural materials. She produces the m
 
  &lt;&lt;heblink [[אנה]]&gt;&gt;</pre>
 </div>
+<div created="20200220064244882" modified="20200220064624132" tags="Metafiction [[Here in the Ghetto]]" title="Ariella's path">
+<pre>
+[img[pictures/hashvil-shel-ariela.jpg]]
+
+
+!!![[Tomer]]::
+
+This beautiful path is on the eastern side of the Ayalon road, and it's Ariella's path, my friend [[from the desk|Tel Aviv Desk]].
+
+
+
+ &lt;&lt;heblink [[השביל של אריאלה]]&gt;&gt;</pre>
+</div>
 <div created="20200219200805835" modified="20200219201025553" tags="[[Iry claims]]" title="Arnon Chen">
 <pre>
 [img[pictures/arnon-chen.jpg]]
@@ -8971,7 +8986,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200219200932620" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200220064555578" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
