--- a/english.html
+++ b/english.html
@@ -587,7 +587,7 @@ Error message and password prompt
 
 <li>Roast beef with potatoes</li>
 
-<li>Roje</li>
+<li>Roger</li>
 
 <li>Romema</li>
 
@@ -8593,7 +8593,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219195305309" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220075118305" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8622,7 +8622,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220064542404" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220075040273" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8921,12 +8921,12 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
  &lt;&lt;heblink [[אנג'ליק]]&gt;&gt;
 </pre>
 </div>
-<div created="20200218185443099" modified="20200218190918037" tags="[[Coen sister]]" title="Anna">
+<div created="20200218185443099" modified="20200220075112122" tags="[[Coen sister]]" title="Anna">
 <pre>[img[pictures/JcnhaFI7DwaT9664.jpg]]
 
 !!![[Yoyo]]:
 
-Anna of [[Roje]], was born in Berlin, and when she was 5 her parents immigrated to Paris.
+Anna of [[Roger]], was born in Berlin, and when she was 5 her parents immigrated to Paris.
 
 She is 30. She studied Botanic.
 She creates cosmetic medical products from natural materials. She produces the most effective eardrops there are, and our women, [[Eva]] and [[Genevieve]] are very pleased with her face masks, that are made from some sort of soil mixture, that is packaged in a box, and arrives with oil bottle, which is added into the soil mixture before the usage.
@@ -10984,7 +10984,7 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
 
 </pre>
 </div>
-<div created="20200218190952659" modified="20200218191053045" tags="[[Coen sister]]" title="Roje">
+<div created="20200218190952659" modified="20200220075051418" tags="[[Coen sister]]" title="Roger">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
 
 
