--- a/english.html
+++ b/english.html
@@ -325,6 +325,8 @@ Error message and password prompt
 
 <li>Christmas dinner Recipes</li>
 
+<li>Cleaning properly</li>
+
 <li>Coen sister</li>
 
 <li>Coen Sisters</li>
@@ -401,6 +403,8 @@ Error message and password prompt
 
 <li>Hamigdalor</li>
 
+<li>Hand activator</li>
+
 <li>Hanna our mother</li>
 
 <li>Harry Dean Stanton</li>
@@ -408,6 +412,8 @@ Error message and password prompt
 <li>Here in the Ghetto</li>
 
 <li>HH</li>
+
+<li>Holiday psalms</li>
 
 <li>Hora</li>
 
@@ -8593,7 +8599,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220075118305" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220153356842" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8622,7 +8628,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220075040273" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220152238054" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8875,8 +8881,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 </pre>
 </div>
 <div created="20200219184254185" modified="20200219184347405" tags="[[Iry claims]]" title="Alexander Technique">
-<pre>
-[img[pictures/shitat-alexander.jpg]]
+<pre>[img[pictures/shitat-alexander.jpg]]
 
 
  &lt;&lt;heblink [[שיטת אלכסנדר]]&gt;&gt;
@@ -8936,8 +8941,7 @@ She creates cosmetic medical products from natural materials. She produces the m
  &lt;&lt;heblink [[אנה]]&gt;&gt;</pre>
 </div>
 <div created="20200220064244882" modified="20200220064624132" tags="Metafiction [[Here in the Ghetto]]" title="Ariella's path">
-<pre>
-[img[pictures/hashvil-shel-ariela.jpg]]
+<pre>[img[pictures/hashvil-shel-ariela.jpg]]
 
 
 !!![[Tomer]]::
@@ -8949,8 +8953,7 @@ This beautiful path is on the eastern side of the Ayalon road, and it's Ariella'
  &lt;&lt;heblink [[השביל של אריאלה]]&gt;&gt;</pre>
 </div>
 <div created="20200219200805835" modified="20200219201025553" tags="[[Iry claims]]" title="Arnon Chen">
-<pre>
-[img[pictures/arnon-chen.jpg]]
+<pre>[img[pictures/arnon-chen.jpg]]
 
 
 !!![[Iry]]:
@@ -8986,7 +8989,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200220064555578" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200220153506091" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9246,6 +9249,15 @@ coming soon as possible
 
 </pre>
 </div>
+<div created="20200220153427025" modified="20200220153617910" tags="[[The kitchen by Genevieve]] Kitchens" title="Cleaning properly">
+<pre>
+[img[pictures/menakim-heytev.jpg]]
+
+
+
+ &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212220505011" modified="20200215162033334" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
 <pre>[img[pictures/achot-coen.jpg]]
 
@@ -9427,8 +9439,7 @@ This is [[David Byrne|http://davidbyrne.com/]].
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
 <div created="20200219194330639" modified="20200219194546174" tags="[[Outer sisters]] Films [[The Sopranos]] Music" title="David Chase">
-<pre>
-[img[pictures/david-chase.jpg]]
+<pre>[img[pictures/david-chase.jpg]]
 
 
 
@@ -9556,8 +9567,7 @@ There aren't enough words or space to describe the wonder of him and of the whol
 </pre>
 </div>
 <div created="20200219184944077" modified="20200219185100534" tags="Music [[How many songs can you even invent at all]] [[Iry claims]] [[On the road to somewhere]]" title="Fauré's Requiem">
-<pre>
-[img[pictures/requiem-faure.jpg]]
+<pre>[img[pictures/requiem-faure.jpg]]
 
 
 
@@ -9788,6 +9798,23 @@ On these winter days, at the afternoon, many times I walk with [[little Nano|Nan
 
 </pre>
 </div>
+<div created="20200220151433589" modified="20200220153557162" tags="[[Dreams that we've dreamt]] Kitchens" title="Hand activator">
+<pre>
+[img[pictures/mafil-yad.jpg]]
+
+
+!!![[Yoyo]]:
+
+Since I’ve become the [[cleaning inspector|Cleaning properly]] at [[the Couscous|The Couscous]], I dream about a small mechanic apparatus, that’s installed on your wrist like a clock, and when you activate it the hand moves, and there are four options:
+
+Piano circles, forte circles, piano back and forth and forte back and forth. 
+
+When there is no activator, you could use [[sound waves|https://www.youtube.com/watch?v=JEq10L7u3SM]]. 
+ 
+
+
+ &lt;&lt;heblink [[מפעיל יד]]&gt;&gt;</pre>
+</div>
 <div created="20200217165254118" modified="20200217175255085" tags="[[The estate]]" title="Hanna our mother">
 <pre>[img[pictures/chana-imenu.jpg]]
 
@@ -9837,6 +9864,28 @@ The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/wat
 &lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[HH]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200220150514247" modified="20200220151401606" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]]" title="Holiday psalms">
+<pre>
+[img[pictures/zemirot-chag.jpg]]
+
+
+!!![[Tomer]]:
+:
+It's the end of Sukkot 2018, at the afternoon hours, Sheffi drove with Nano our sweet baby, and I'm supposed to chill and work, but I'm sitting like an idiot, hearing the president of the USA saying things while our prime minister sitting near him happy with his life. Suddenly, A psalms' sound is rising from the sukkah at the nearby building's yard and saves me. I smile. Stand up. Pick through the blinds. Enjoy myself. Take a picture and send [[Gura]].
+
+
+
+ &lt;&lt;heblink [[זמירות חג]]&gt;&gt;
+
+
+
+
+
 
 
 
@@ -10034,8 +10083,7 @@ In order of understanding more, I recommend :
  &lt;&lt;heblink [[אירי טוענת]]&gt;&gt;</pre>
 </div>
 <div created="20200219200218714" modified="20200219200528395" tags="[[Iry claims]] [[Outer sisters]]" title="Isadora Duncan">
-<pre>
-[img[pictures/isadora-duncan.jpg]]
+<pre>[img[pictures/isadora-duncan.jpg]]
 
 !!![[Iry]]:
 
@@ -11036,8 +11084,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
 <div created="20200219185255391" modified="20200219185508059" tags="[[On the road to somewhere]] [[Iry and Gura]]" title="Searching for Iry">
-<pre>
-[img[pictures/mechapeset-et-iri.jpg]]
+<pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
 
@@ -11169,8 +11216,7 @@ And I say:
 </pre>
 </div>
 <div created="20200219184517386" modified="20200219184658690" tags="[[Iry claims]] [[The global village]]" title="Spiral Spring">
-<pre>
-[img[pictures/kfitz-spirali.jpg]]
+<pre>[img[pictures/kfitz-spirali.jpg]]
 
 
 
@@ -11319,8 +11365,7 @@ It's not like there's no more fear, difficulty, agony, sadness and anger. The he
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
 <div created="20200219192024367" modified="20200219193456061" tags="[[Iry claims]] [[Monkeys with car keys]] [[On the road to somewhere]]" title="The body updates">
-<pre>
-[img[pictures/haguf-mitadken.jpg]]
+<pre>[img[pictures/haguf-mitadken.jpg]]
 
 
 !!![[Iry]]:
@@ -11381,8 +11426,7 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
 </pre>
 </div>
 <div created="20200219190912292" modified="20200219191227913" tags="[[Iry claims]] [[The global village]]" title="The erected">
-<pre>
-[img[pictures/zkufey-hagev.jpg]]
+<pre>[img[pictures/zkufey-hagev.jpg]]
 
 
 !!![[Gura]]:
