--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="רוז'ה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220075005449" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220153112938" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200220064657067" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200220153646402" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12977,12 +12977,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Genevieve]]&gt;&gt;</pre>
 </div>
-<div created="20180927093957805" modified="20200212143854342" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="זמירות חג">
+<div created="20180927093957805" modified="20200220151135698" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="זמירות חג">
 <pre>[img[pictures/zemirot-chag.jpg]]
 
 !!![[תומר]]:
 
-חוהמ&quot;ס התשע&quot;ט, שעות אחר הצהריים, שפי נסעה עם ננו התינוקת המתוקה שלנו, ואני אמור להסתלבט וגם לעבוד, אבל אני יושב כמו אידיוט ושומע את נשיא ארה&quot;ב אומר דברים בעוד רוה&quot;מ שלנו יושב לידו ועף על החיים. לפתע קול שירת זמירות חג עולה מהסוכה שבחצר הבניין הסמוך, ומציל אותי. אני מחייך. קם. מציץ דרך התריס. נהנה. מצלם, ושולח [[לגורה|גורה]].</pre>
+חוהמ&quot;ס התשע&quot;ט, שעות אחר הצהריים, שפי נסעה עם ננו התינוקת המתוקה שלנו, ואני אמור להסתלבט וגם לעבוד, אבל אני יושב כמו אידיוט ושומע את נשיא ארה&quot;ב אומר דברים בעוד רוה&quot;מ שלנו יושב לידו ועף על החיים. לפתע קול שירת זמירות חג עולה מהסוכה שבחצר הבניין הסמוך, ומציל אותי. אני מחייך. קם. מציץ דרך התריס. נהנה. מצלם, ושולח [[לגורה|גורה]].
+
+
+&lt;&lt;englink [[  Holiday psalms ]]&gt;&gt;</pre>
 </div>
 <div created="20170527175706471" modified="20200219191314177" tags="[[אירי טוענת]]" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
@@ -15402,7 +15405,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Assuming and Preserving]]&gt;&gt;</pre>
 </div>
-<div created="20170114175718512" modified="20190617134304491" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="מנקים היטב">
+<div created="20170114175718512" modified="20200220153718633" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15413,6 +15416,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ביקשתי מיויו להפוך [[למפקח על הנקיון|חלומות שחלמנו]], והוא קיבל בשמחה את הג'וב.
 
 בזכות [[יויו|רוטב בשאמל]], במטבח של &quot;שה ז'נבייב&quot;, כולנו מנקים היטב.
+
+
+&lt;&lt;englink [[Cleaning properly]]&gt;&gt;
 
 
 
@@ -15484,7 +15490,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tel Aviv Desk]]&gt;&gt;</pre>
 </div>
-<div created="20170422190532804" modified="20190617134421789" tags="[[חלומות שחלמנו]] מטבחים" title="מפעיל יד">
+<div created="20170422190532804" modified="20200220153108546" tags="[[חלומות שחלמנו]] מטבחים" title="מפעיל יד">
 <pre>[img[pictures/mafil-yad.jpg]]
 
 !!![[יויו]]:
@@ -15493,7 +15499,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 במעגלים חלש, במעגלים חזק, קדימה ואחורה חלש וקדימה ואחורה חזק.
 
-באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
+באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].
+
+
+
+&lt;&lt;englink [[Hand activator ]]&gt;&gt;</pre>
 </div>
 <div created="20190418113727292" modified="20190424150310272" tags="[[כאן בגטו]]" title="מפת הגטו">
 <pre>[img[pictures/ghettos-map.jpg]]
